# python-poetry-template

./: README.md  pyproject.toml
.github/workflows/: codecov.yml  main.yml  publish-pypy.yml  python-package.yml  test-coverage.yml  test-doc.yml  test-lint.yml
docs/source/: conf.py  template.rst
template/: main.py
tests/: test_template.py
